--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -12,7 +12,10 @@
           {% if user.is_authenticated %}
           <a href="{% url 'notes.list'%}" class="btn btn-outline-light me-1">Home</a>
           <a href="{% url 'notes.new'%}" class="btn btn-outline-light me-1">Create</a>
-          <a href="{% url 'logout'%}" class="btn btn-outline-light me-1">Logout</a>
+          <form method="post" action="{% url 'logout' %}" style="display: inline;">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-outline-light me-1">Logout</button>
+          </form>
           {% else %}
           <a href="{% url 'login'%}" class="btn btn-outline-light me-1">Login</a>
           <a href="{% url 'signup'%}" class="btn btn-outline-light me-1">Signup</a>
